# python-openai-lab

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
tests/services/: test_chatgpt.py  test_youtube.py
tests/services/fixtures/: youtube_playlist_items_response.json
youtube_api_lab/: main.py
youtube_api_lab/services/: chatgpt.py  youtube.py
